Fix calendar vertical scroll overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,7 @@ main {
   flex: 1;
   align-items: center;
   overflow-x: auto;
+  overflow-y: hidden;
   scrollbar-width: none;
   -ms-overflow-style: none;
   scroll-behavior: smooth;
